dsl2/src/test/resources/parsing/invalid/bad_type/bad_assignment.uss
# Ne peut pas fonctionner xd
int a = "string";